--- a/prepros.cfg
+++ b/prepros.cfg
@@ -396,6 +396,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "c5a7193b": {
+          "id": "c5a7193b",
+          "path": "contact.jade",
+          "output": "contact.html",
+          "name": "contact.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
         }
       },
       "deploymentHistory": {},
